<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image3"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chatroom_app"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/custom2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="60dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textColor="@color/blue1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,TextFields" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue1"
                android:ems="10"
                android:textColor="@color/blue1"
                android:textStyle="bold"
                android:hint="Temporary Name"
                android:inputType="text"
                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/custom1"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/blue1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/blue1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="login"
                android:text="@string/log_in"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_marginBaseline="20dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"

                android:onClick="signup"
                android:text="@string/create_account"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/green1"
                android:onClick="chatroom"
                android:text="@string/chatroom"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>